--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,6 @@
 <html lang="ru">
 <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta http-equiv="expires" content="0">
     <meta charset="utf-8">
     <meta name="mobile-web-app-capable" content="yes">
@@ -30,8 +30,6 @@
     </script>
 </head>
 <body>
-<div id="app">
-    <App/>
-</div>
+<div id="app"><App></App></div>
 </body>
 </html>
